Core tests were fixed.