@@ -67,6 +67,7 @@ public class QueryOperatorContainsValue extends QueryOperatorEqualityNotNulls {
       return null;
     }
 
+    var transaction = iContext.getDatabaseSession().getActiveTransaction();
     if (indexDefinition.getParamCount() == 1) {
       if (!((indexDefinition instanceof PropertyMapIndexDefinition)
           && ((PropertyMapIndexDefinition) indexDefinition).getIndexBy()
@@ -76,7 +77,7 @@ public class QueryOperatorContainsValue extends QueryOperatorEqualityNotNulls {
 
       final var key =
           ((IndexDefinitionMultiValue) indexDefinition)
-              .createSingleValue(iContext.getDatabaseSession(), keyParams.get(0));
+              .createSingleValue(transaction, keyParams.getFirst());
 
       if (key == null) {
         return null;
@@ -99,7 +100,7 @@ public class QueryOperatorContainsValue extends QueryOperatorEqualityNotNulls {
       }
 
       final Object keyOne =
-          compositeIndexDefinition.createSingleValue(iContext.getDatabaseSession(), keyParams);
+          compositeIndexDefinition.createSingleValue(transaction, keyParams);
 
       if (keyOne == null) {
         return null;
@@ -107,7 +108,7 @@ public class QueryOperatorContainsValue extends QueryOperatorEqualityNotNulls {
 
       if (index.hasRangeQuerySupport()) {
         final Object keyTwo =
-            compositeIndexDefinition.createSingleValue(iContext.getDatabaseSession(), keyParams);
+            compositeIndexDefinition.createSingleValue(transaction, keyParams);
 
         stream = index
             .streamEntriesBetween(iContext.getDatabaseSession(), keyOne, true, keyTwo, true,
